--- a/css/override.css
+++ b/css/override.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Times New Roman", Times, serif; font-size: 0.7em;
+    font-family: "Times New Roman", Times, serif;
 }
 
 hr {
