--- a/css/override.css
+++ b/css/override.css
@@ -2,6 +2,8 @@ body {
     font-family: "Courier New", Times, serif;
 }
 
+$spacing-unit:   20px !default;
+
 hr {
   margin-top: 30px;
   margin-bottom: 20px;
